# handsai

./: .dockerignore  .gitignore  Dockerfile  app.py  build_js_model.py  docker-compose.yaml  index.html  pyproject.toml  tf_serving_entrypoint.sh
adalo/: index.js  package.json
app/: .eslintrc.js  .gitignore  App.js  app.json  environment.js  package.json
app/__tests__/: App-test.js
app/actions/: galleryActions.js  predictionActions.js  supportSetActions.js
app/components/: BoundingBoxDraw.js  Camera.js  DefaultModalContent.js  Gallery.js  HomeScreen.js  ModalContent.js  Prediction.js
app/models/: encoder.js  index.js  kernel.js  preprocessing.js
app/reducers/: galleryReducers.js  index.js  predictionReducers.js  supportSetReducers.js
app/sagas/: index.js  predictionSagas.js
app/store/: store.js
app/utils/: arrayUtils.js  imageUtils.js  tensorUtils.js
app_2/: App.js  app.json  environment.js  package.json
app_2/actions/: predictionActions.js
app_2/components/: BoundingBoxDraw.js  Gallery.js  HomeScreen.js  Prediction.js
app_2/models/: encoder.js  index.js  kernel.js
app_2/reducers/: crudReducers.js  index.js  predictionReducers.js
app_2/sagas/: index.js  photosSagas.js  predictionSagas.js
app_2/utils/: arrayUtils.js
handsai/: App.js  app.json  environment.js  package.json
handsai/components/: BoundingBoxDraw.js  Cameja.js  Camera.js  HomeScreen.js  Prediction.js
handsai/constants/: Layout.js
handsai/web-build/: asset-manifest.json  index.html  manifest.json  service-worker.js  (+1 more)
web/: README.md  package-lock.json  package.json
(+28 files in other folders)
