[tool.poetry]
name = "handsai"
version = "0.1.0"
description = "Build computer vision models with you smartphone"
authors = ["Clément Walter <clementw@sicara.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
