[tool.black]
line-length = 120

[tool.poetry]
name = "handsai"
version = "0.1.0"
description = "Build computer vision models with your smartphone"
authors = ["Clément Walter <clementw@handsai.me>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
flask_httpauth = "^4.1.0"
flask-cors = "^3.0.8"
gunicorn = "^20.0.4"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
tensorflow = "^2.1.0"
tensorflowjs = "^1.7.2"
tensorflow-estimator = "2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
